# gpnn

./: .gitignore  CONTRIBUTING.md  ReadMe.md  gpnn.py  pyproject.toml
examples/: advanced_example.py  basic_example.py
src/gpnn/: __init__.py  config.py  exceptions.py  kernels.py  models.py  utils.py
tests/: test_kernels.py  test_models.py
