[project]
name = "gpnn"
version = "0.1.0"
description = "Gaussian Process Neural Networks with PyTorch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abhishek Mamgain", email = "abhi.mamg@gmail.com" }]
requires-python = ">=3.12"
keywords = ["gaussian-process", "machine-learning", "pytorch", "regression", "uncertainty-quantification"]
dependencies = ["numpy>=1.21.0", "scipy>=1.7.0", "matplotlib>=3.5.0", "scikit-learn>=1.0.0", "torch>=2.0.0", "torchvision>=0.15.0", "torchaudio>=2.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/abhimamg/gpnn"
Repository = "https://github.com/abhimamg/gpnn"
Issues = "https://github.com/abhimamg/gpnn/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
torch = { index = "ado" }

[[tool.uv.index]]
name = "ado"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]

[tool.ruff.lint.isort]
known-first-party = ["gpnn"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
# Examples can use print statements
"examples/**/*" = ["T201"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
